@@ -3,3 +3,4 @@
 - PIP-45 Dodano brakujące pliki lokalizacji.
 - PIP-45 Poprawiono pliki lokalizacji.
 - Fix pom.xml, teraz projekt się uruchamia
+- PIP-46 Poprawiono pliki lokalizacji oraz gadget.xml
